feat: Internationalize upload date and add TabNavigation tests
- Add 'uploadDate' translation key to home page JSON resources (EN/ES/FR)
- Update ReportItem to use translated upload date text
- Create comprehensive test suite for TabNavigation component
- Add mocking for various page components and hooks in TabNavigation tests
- Update WithMinimalProviders to include QueryClientProvider

--- a/frontend/src/common/utils/i18n/resources/en/home.json
+++ b/frontend/src/common/utils/i18n/resources/en/home.json
@@ -23,6 +23,7 @@
     "latestTitle": "Latest Reports",
     "seeAll": "See All",
     "error": "Failed to load reports",
+    "uploadDate": "Upload Date",
     "noReports": {
       "title": "No Reports Yet",
       "message": "Upload your medical reports or connect with your healthcare provider to get started.",
