Phase 3 - Add Sign Up Page and Enhance Authentication Flow
- Implement SignUpPage and SignUpForm components
- Update Icon component with Google and Apple icons
- Modify SignInForm to support email login and social sign-in
- Update AppRouter to include sign-up route
- Enhance auth translations with sign-up related text
- Refactor SignOutPage to handle sign-out errors

--- a/frontend/src/common/utils/i18n/resources/en/auth.json
+++ b/frontend/src/common/utils/i18n/resources/en/auth.json
@@ -9,10 +9,32 @@
     "part4": " or ",
     "part5": "You may use any value as the password."
   },
+  "info-email": {
+    "part1": "Enter your email address associated with your account.",
+    "part2": "For testing, you can create a new account by clicking on the Sign Up link below."
+  },
   "label": {
     "password": "Password",
     "remember-me": "Remember me",
-    "username": "Username"
+    "username": "Username",
+    "email": "Email Address",
+    "first-name": "First Name",
+    "last-name": "Last Name",
+    "confirm-password": "Confirm Password",
+    "verification-code": "Verification Code"
   },
-  "signin": "Sign In"
+  "signin": "Sign In",
+  "signup": "Sign Up",
+  "signout": "Sign Out",
+  "no-account": "Don't have an account?",
+  "already-have-account": "Already have an account?",
+  "or-signin-with": "Or sign in with",
+  "submit": "Submit",
+  "confirm": "Confirm",
+  "resend-code": "Resend Code",
+  "email-verification": {
+    "title": "Email Verification",
+    "message": "We've sent a verification code to your email. Please enter it below to verify your account.",
+    "success": "Email verified successfully!"
+  }
 }
