Phase 6 - Enhance Authentication UI with Loading and Error Components
- Add AuthErrorDisplay and AuthLoadingIndicator components for consistent auth UI
- Update SignIn, SignUp, and Verification forms to use new components
- Improve error handling and loading state management
- Add new translations for loading messages and validation
- Refactor error display and loading logic across auth forms

--- a/frontend/src/common/utils/i18n/resources/en/auth.json
+++ b/frontend/src/common/utils/i18n/resources/en/auth.json
@@ -2,7 +2,8 @@
   "error": {
     "unable-to-verify": "We were unable to verify your credentials. Please try again.",
     "no-email": "Email address is required for verification.",
-    "oauth-redirect": "There was an error processing your social login"
+    "oauth-redirect": "There was an error processing your social login",
+    "details": "Error details"
   },
   "info-username": {
     "part1": "This example application uses ",
@@ -28,6 +29,10 @@
   "signin": "Sign In",
   "signup": "Sign Up",
   "signout": "Sign Out",
+  "loading": "Loading...",
+  "signin.loading": "Signing in...",
+  "signup.loading": "Creating your account...",
+  "verification.loading": "Verifying your email...",
   "no-account": "Don't have an account?",
   "already-have-account": "Already have an account?",
   "or-signin-with": "Or sign in with",
@@ -50,6 +55,10 @@
   "validation": {
     "numeric": "Must contain only numbers",
     "exact-length": "Must be exactly {{length}} characters",
-    "passwords-match": "Passwords must match"
+    "passwords-match": "Passwords must match",
+    "email": "Please enter a valid email address",
+    "required": "This field is required",
+    "min-length": "Must be at least {{length}} characters",
+    "max-length": "Must be at most {{length}} characters"
   }
 }
