Add Stylelint configuration and update ESLint ignores
- Introduced .stylelintrc.json for SCSS linting with specific rules and ignored files
- Updated eslint.config.mjs to include additional ignored paths for consistency
- Added stylelint and related packages to package.json and package-lock.json
- Enhanced linting scripts in package.json to include SCSS linting
- Minor adjustments to Avatar component styles and AppMenu for better user experience
- Updated PrivateOutlet tests to include new auth state handling
- Added new translations for reports in English, Spanish, and French

--- a/frontend/src/common/utils/i18n/resources/en/common.json
+++ b/frontend/src/common/utils/i18n/resources/en/common.json
@@ -24,6 +24,9 @@
     "signout": "Sign Out",
     "users": "Users"
   },
+  "reports": {
+    "uploadDate": "Upload Date"
+  },
   "validation": {
     "email": "Must be an email address. ",
     "max": "Must be at most {{max}} characters. ",
