--- a/frontend/src/common/utils/i18n/resources/es/common.json
+++ b/frontend/src/common/utils/i18n/resources/es/common.json
@@ -24,6 +24,9 @@
     "signout": "Desconecta",
     "users": "Usuarios"
   },
+  "reports": {
+    "uploadDate": "Fecha de carga"
+  },
   "validation": {
     "email": "Debe ser una dirección de correo electrónico. ",
     "max": "Debe tener como máximo {{max}} caracteres. ",
