--- a/frontend/src/common/utils/i18n/resources/en/auth.json
+++ b/frontend/src/common/utils/i18n/resources/en/auth.json
@@ -39,6 +39,7 @@
   "submit": "Submit",
   "confirm": "Confirm",
   "resend-code": "Resend Code",
+  "password-requirements": "Password Requirements:",
   "email-verification": {
     "title": "Email Verification",
     "message": "We've sent a verification code to your email. Please enter it below to verify your account.",
@@ -59,6 +60,9 @@
     "email": "Please enter a valid email address",
     "required": "This field is required",
     "min-length": "Must be at least {{length}} characters",
-    "max-length": "Must be at most {{length}} characters"
+    "max-length": "Must be at most {{length}} characters",
+    "uppercase": "Must contain at least one uppercase letter",
+    "number": "Must contain at least one number",
+    "special-char": "Must contain at least one special character"
   }
 }
