[ADE-63] - Add password recovery features
- Implemented ForgotPassword and ResetPassword pages with corresponding forms.
- Added forgotPassword and confirmResetPassword functions in useAuthOperations.
- Updated AuthContext and AuthProvider to include new password recovery methods.
- Enhanced routing in AppRouter to support new password recovery routes.
- Added tests for forgotPassword and confirmResetPassword functionalities.
- Updated translations and styles for password recovery UI components.

--- a/frontend/src/common/utils/i18n/resources/en/auth.json
+++ b/frontend/src/common/utils/i18n/resources/en/auth.json
@@ -39,6 +39,19 @@
   "submit": "Submit",
   "confirm": "Confirm",
   "resend-code": "Resend Code",
+  "forgot-password": "Forgot Password?",
+  "password-recovery": {
+    "title": "Password Recovery",
+    "message": "Enter your email address and we'll send you instructions to reset your password.",
+    "success": "Password reset instructions sent to your email.",
+    "email-sent": "We've sent a verification code to your email.",
+    "enter-code": "Enter the verification code and your new password below."
+  },
+  "password-reset": {
+    "title": "Reset Password",
+    "success": "Password reset successful!",
+    "button": "Reset Password"
+  },
   "password-requirements": "Password Requirements:",
   "email-verification": {
     "title": "Email Verification",
