[ADE-137] - Update auth error messages for clarity and improve email validation prompt

--- a/frontend/src/common/utils/i18n/resources/en/auth.json
+++ b/frontend/src/common/utils/i18n/resources/en/auth.json
@@ -70,7 +70,7 @@
     "numeric": "Must contain only numbers",
     "exact-length": "Must be exactly {{length}} characters",
     "passwords-match": "Passwords must match",
-    "email": "Please enter a valid email address",
+    "email": "Please provide a valid email address (e.g., name@example.com).",
     "required": "This field is required",
     "min-length": "Must be at least {{length}} characters",
     "max-length": "Must be at most {{length}} characters",
