--- a/frontend/src/common/utils/i18n/resources/fr/common.json
+++ b/frontend/src/common/utils/i18n/resources/fr/common.json
@@ -27,6 +27,30 @@
   "reports": {
     "uploadDate": "Date de téléchargement"
   },
+  "upload": {
+    "addNewFile": "Ajouter un nouveau fichier",
+    "dropFilesHere": "Téléchargez votre fichier ici",
+    "supportedFileTypes": "Types de fichiers pris en charge:",
+    "maxFileSize": "Taille maximale du fichier:",
+    "imageSizeLimit": "Images 5MB",
+    "pdfSizeLimit": "PDF 10MB",
+    "selectFile": "Télécharger",
+    "upload": "Télécharger",
+    "uploading": "Téléchargement",
+    "uploadSuccessful": "Téléchargement réussi",
+    "fileReadyForProcessing": "Votre fichier est prêt à être traité",
+    "uploadFailed": "Échec du téléchargement",
+    "error": {
+      "noFile": "Aucun fichier sélectionné",
+      "permissionDenied": "Permission refusée",
+      "unknown": "Une erreur inconnue s'est produite"
+    }
+  },
+  "common": {
+    "done": "Terminé",
+    "tryAgain": "Essayer à nouveau",
+    "cancel": "Annuler"
+  },
   "validation": {
     "email": "Doit être une adresse e-mail. ",
     "max": "Doit contenir au maximum {{max}} caractères. ",
