Enhance report service tests and localization updates
- Expanded reportService.test.ts with additional tests for uploadReport, fetchLatestReports, and fetchAllReports functions.
- Mocked axios for better control over API responses in tests.
- Updated localization strings in English, Spanish, and French for consistency, changing "try-again" to "tryAgain" and modifying no reports messages.
- Adjusted NoReportsMessage component to utilize updated translation keys.

--- a/frontend/src/common/utils/i18n/resources/en/common.json
+++ b/frontend/src/common/utils/i18n/resources/en/common.json
@@ -15,7 +15,7 @@
     "dismiss": "Dismiss",
     "edit": "Edit",
     "save": "Save",
-    "try-again": "Try Again"
+    "tryAgain": "Try Again"
   },
   "navigation": {
     "account": "Account",
