--- a/frontend/src/common/utils/i18n/resources/es/common.json
+++ b/frontend/src/common/utils/i18n/resources/es/common.json
@@ -15,7 +15,7 @@
     "dismiss": "Despedir",
     "edit": "Editar",
     "save": "Guardar",
-    "try-again": "Intentar otra vez"
+    "tryAgain": "Intentar otra vez"
   },
   "navigation": {
     "account": "Cuenta",
