--- a/frontend/src/common/utils/i18n/resources/fr/common.json
+++ b/frontend/src/common/utils/i18n/resources/fr/common.json
@@ -15,7 +15,7 @@
     "dismiss": "Rejeter",
     "edit": "Modifier",
     "save": "Sauvegarder",
-    "try-again": "Essayer à nouveau"
+    "tryAgain": "Essayer à nouveau"
   },
   "navigation": {
     "account": "Compte",
