Add chat session management and UI enhancements
- Introduced setup-tests.ts for mocking AWS Amplify and Bedrock services in tests.
- Updated AIAssistantModal to reset chat session and clear messages on close and dismiss.
- Enhanced ChatContainer and ChatInput for improved user experience with updated placeholders.
- Added resetSession method in ChatService for managing chat sessions.
- Updated BedrockService to handle test environments and improved error handling.
- Added internationalization support for AI Assistant strings in English, Spanish, and French.
- Improved ChatPage to reset session on component mount and unmount.

--- a/frontend/src/common/utils/i18n/resources/en/common.json
+++ b/frontend/src/common/utils/i18n/resources/en/common.json
@@ -22,7 +22,8 @@
     "home": "Home",
     "menu": "Menu",
     "signout": "Sign Out",
-    "users": "Users"
+    "users": "Users",
+    "chat": "AI Assistant"
   },
   "reports": {
     "uploadDate": "Upload Date"
@@ -51,6 +52,10 @@
     "tryAgain": "Try Again",
     "cancel": "Cancel"
   },
+  "aiAssistant": {
+    "inputPlaceholder": "Type your question...",
+    "emptyState": "How can I help you today?"
+  },
   "validation": {
     "email": "Must be an email address. ",
     "max": "Must be at most {{max}} characters. ",
@@ -63,5 +68,10 @@
   "no": "no",
   "updated": "updated",
   "welcome": "Welcome",
-  "yes": "yes"
+  "yes": "yes",
+  "pages": {
+    "chat": {
+      "title": "AI Assistant"
+    }
+  }
 }
