Enhance UploadModal with error handling and new icon
- Added error message display in UploadModal for better user feedback.
- Introduced faCircleXmark icon for error indication.
- Updated UploadModal.scss for new error message styling.
- Adjusted UploadModal.tsx to render error state correctly.
- Added new error messages in English, Spanish, and French for file size and type validation.
- Included a new image asset for upload error representation.

--- a/frontend/src/common/utils/i18n/resources/en/common.json
+++ b/frontend/src/common/utils/i18n/resources/en/common.json
@@ -44,7 +44,9 @@
     "error": {
       "noFile": "No file selected",
       "permissionDenied": "Permission denied",
-      "unknown": "An unknown error occurred"
+      "unknown": "An unknown error occurred",
+      "fileTooBig": "File is too large. Please upload a smaller file.",
+      "invalidType": "Invalid file type. Please upload a supported file type."
     }
   },
   "common": {
