Add internationalization (i18n) support and update UI components
- Introduced a new .cursorrules file outlining i18n best practices for React components, including guidelines for text handling and translation key organization.
- Updated CheckboxInput.scss to enhance checkbox styling.
- Added new translation keys for sign-in titles and subtitles in English, Spanish, and French.
- Enhanced SignInPage and SignInForm components with i18n support, ensuring no hardcoded text is present.
- Improved SignInPage.scss for better layout and visual consistency.
- Established a structured approach for managing translations across the application.

--- a/frontend/src/common/utils/i18n/resources/en/auth.json
+++ b/frontend/src/common/utils/i18n/resources/en/auth.json
@@ -27,6 +27,8 @@
     "verification-code": "Verification Code"
   },
   "signin": "Sign In",
+  "signin.title": "Log in",
+  "signin.subtitle": "Login to access MedReport AI",
   "signup": "Sign Up",
   "signout": "Sign Out",
   "loading": "Loading...",
