--- a/frontend/src/common/utils/i18n/resources/en/common.json
+++ b/frontend/src/common/utils/i18n/resources/en/common.json
@@ -1,4 +1,7 @@
 {
+  "app": {
+    "name": "MEDReport AI"
+  },
   "confirm-prompt": "Are you sure?",
   "created": "created",
   "deleted": "deleted",
