--- a/frontend/src/common/utils/i18n/resources/es/auth.json
+++ b/frontend/src/common/utils/i18n/resources/es/auth.json
@@ -14,5 +14,7 @@
     "remember-me": "Acuérdate de mí",
     "username": "Nombre de usuario"
   },
-  "signin": "Iniciar sesión"
+  "signin": "Iniciar sesión",
+  "signin.title": "Iniciar sesión",
+  "signin.subtitle": "Iniciar sesión para acceder a MEDReport AI"
 }
