--- a/frontend/src/common/utils/i18n/resources/fr/auth.json
+++ b/frontend/src/common/utils/i18n/resources/fr/auth.json
@@ -7,12 +7,14 @@
     "part2": "données JSONPlaceholder",
     "part3": "Essayez un nom d'utilisateur comme ",
     "part4": " ou ",
-    "part5": "Vous pouvez utiliser n’importe quelle valeur comme mot de passe."
+    "part5": "Vous pouvez utiliser n'importe quelle valeur comme mot de passe."
   },
   "label": {
     "password": "Mot de passe",
     "remember-me": "Souviens-toi de moi",
     "username": "Nom d'utilisateur"
   },
-  "signin": "Se connecter"
+  "signin": "Se connecter",
+  "signin.title": "Se connecter",
+  "signin.subtitle": "Connectez-vous pour accéder à MEDReport AI"
 }
