Refactor authentication flow and UI enhancements
- Updated AxiosProvider to include auth token in requests using Cognito.
- Enhanced ForgotPassword and ResetPassword forms with improved UI and error handling.
- Added new translations for better user experience.
- Refactored styles for consistency across authentication pages.
- Cleaned up package-lock.json by removing unused dependencies.

--- a/frontend/src/common/utils/i18n/resources/en/auth.json
+++ b/frontend/src/common/utils/i18n/resources/en/auth.json
@@ -21,6 +21,7 @@
     "remember-me": "Remember me",
     "username": "Username",
     "email": "Email Address",
+    "email_address": "Email Address",
     "first-name": "First Name",
     "last-name": "Last Name",
     "confirm-password": "Confirm Password",
@@ -42,17 +43,23 @@
   "confirm": "Confirm",
   "resend-code": "Resend Code",
   "forgot-password": "Forgot Password?",
+  "back.to.signin": "← Back to Log in",
   "password-recovery": {
-    "title": "Password Recovery",
-    "message": "Enter your email address and we'll send you instructions to reset your password.",
+    "title": "Forgot your Password?",
+    "message": "Enter your account email, and we'll send you reset instructions.",
     "success": "Password reset instructions sent to your email.",
     "email-sent": "We've sent a verification code to your email.",
     "enter-code": "Enter the verification code and your new password below."
   },
   "password-reset": {
     "title": "Reset Password",
+    "message": "Set a new password for your account.",
     "success": "Password reset successful!",
     "button": "Reset Password"
+  },
+  "account-not-found": {
+    "title": "Account not found",
+    "message": "An account with this email address doesn't exist."
   },
   "password-requirements": "Password Requirements:",
   "email-verification": {
