[ADE-171] - Add new MCP configuration and enhance chat functionality
- Introduced `mcp.json` for TalkToFigma command configuration.
- Updated Capacitor server settings to allow all navigation.
- Modified home page i18n message for clarity.
- Enhanced ChatPage to reset chat state on route changes and component unmount.
- Updated NoReportsMessage component to include retry functionality.
- Adjusted NoReportsMessage styles for better visual consistency.

--- a/frontend/src/common/utils/i18n/resources/en/home.json
+++ b/frontend/src/common/utils/i18n/resources/en/home.json
@@ -26,7 +26,7 @@
     "uploadDate": "Upload Date",
     "noReports": {
       "title": "No Reports",
-      "message": "Upload a report or try again later",
+      "message": "Upload a report or try again",
       "uploadButton": "Upload Report",
       "connectButton": "Connect Provider"
     },
