Remove references to neurological

--- a/frontend/src/common/utils/i18n/resources/en/home.json
+++ b/frontend/src/common/utils/i18n/resources/en/home.json
@@ -32,12 +32,8 @@
     },
     "categories": {
       "general": "General",
-      "neurological": "Neurological",
-      "oftalmological": "Oftalmological",
       "heart": "Heart",
-      "gastro": "Gastroenterology",
-      "orthopedic": "Orthopedic",
-      "other": "Other"
+      "brain": "Brain"
     },
     "status": {
       "read": "Read",
