--- a/frontend/src/common/utils/i18n/resources/en/common.json
+++ b/frontend/src/common/utils/i18n/resources/en/common.json
@@ -70,6 +70,9 @@
     "required-path": "{{path}} is required. ",
     "url": "Must be a URL. "
   },
+  "loading": {
+    "report": "Loading report..."
+  },
   "no": "no",
   "updated": "updated",
   "welcome": "Welcome",
